--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack -d --watch",
+    "build" : "webpack -p"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "^6.18.0",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "ejs": "^2.5.2",
@@ -22,8 +28,11 @@
     "path": "^0.12.7",
     "pg": "^6.1.0",
     "pg-hstore": "^2.3.2",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "sequelize": "^3.24.6",
     "sequelize-cli": "^2.4.0",
-    "socket.io": "^1.5.1"
+    "socket.io": "^1.5.1",
+    "webpack": "^1.13.3"
   }
 }
