--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "sequelize": "^3.24.6",
     "sequelize-cli": "^2.4.0",
     "socket.io": "^1.5.1",
+    "stripe": "^4.12.0",
     "webpack": "^1.13.3"
   }
 }
